spade-tests/src/snapshots/spade_tests__linear_check__array_shorthand_uses_mut_wire.snap
---
source: spade-tests/src/linear_check.rs
---
entity e(p: inv bool) {
    let many_p = [p; 3];
}


error: Use of consumed resource
  ┌─ testinput:2:19
  │
2 │     let many_p = [p; 3];
  │                   ^
  │                   │
  │                   Use of consumed resource
  │                   Previously used here
  │
note: The resource is used in this array initialization
  ┌─ testinput:2:18
  │
2 │     let many_p = [p; 3];
  │                  ^^^^^^
  │
