spade-tests/src/snapshots/spade_tests__linear_check__destructuring_linear_type_requires_use_of_subtypes.snap
---
source: spade-tests/src/linear_check.rs
---
entity x(a: (inv bool, inv bool)) -> inv &bool {
    let (x, y) = a;
    x
}


error: y is unused
  ┌─ testinput:2:13
  │
2 │     let (x, y) = a;
  │             ^ y is unused
  │
  = note: y is an inverted wire (`inv &`) which must be set
