spade-tests/src/snapshots/spade_tests__linear_check__double_tuple_consumption_causes_error.snap
---
source: spade-tests/src/linear_check.rs
---
entity x(resource: (inv bool, bool)) -> (inv bool, inv bool) {
    (resource.0, resource.0)
}


error: Use of consumed resource
  ┌─ testinput:2:18
  │
2 │     (resource.0, resource.0)
  │      ----------  ^^^^^^^^^^ Use of consumed resource
  │      │            
  │      Previously used here
