spade-tests/src/snapshots/spade_tests__linear_check__function_calls_consume_ports.snap
---
source: spade-tests/src/linear_check.rs
---
extern entity consumer(x: inv bool) -> bool;

entity test() -> (bool, bool) {
    let p = port().1;
    (inst consumer(p), inst consumer(p))
}


error: Use of consumed resource
  ┌─ testinput:5:38
  │
5 │     (inst consumer(p), inst consumer(p))
  │                    -                 ^ Use of consumed resource
  │                    │                  
  │                    Previously used here
